--- a/web/404.htm
+++ b/web/404.htm
@@ -3,8 +3,8 @@
 <head>
 	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../svn-depo/stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../svn-depo/images/favicon.ico">
+	<link href="stil.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body class="arka">
@@ -19,7 +19,7 @@
 <table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td width="620" height="60">
-<img src="../svn-depo/images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
+<img src="images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
 </td>
 </tr>
 
@@ -33,10 +33,10 @@
 <!-- SAYFA İÇERİK BAŞI -->
 <table width="695" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td width="20" height="242" valign="top"><img src="../svn-depo/images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
+                <td width="20" height="242" valign="top"><img src="images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
                 <td width="10" valign="top">&nbsp;</td>
                 <td width="661" valign="top" class="metin"><p><span class="baslik"><font size="5" face="Verdana, Arial, Helvetica, sans-serif"><img src="images/uyari.png" width="150" height="157" align="left">HATA 404</font></span><br>
-                    <span class="baslik"><img src="../svn-depo/images/bullet-krm.png"> Aradığınız
+                    <span class="baslik"><img src="images/bullet-krm.png"> Aradığınız
                     sayfaya ulaşılamadı.<br>
                         </span><br>
                       <br>
