--- a/web/404.htm
+++ b/web/404.htm
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="stil.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
 </head>
 
 <body class="arka">
@@ -13,7 +14,7 @@
 <td width="878" align="center" valign="top">
 <table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
 <tr>
-<td width="800" height="228" valign="top">
+<td width="800" valign="top">
 
 <!-- logo -->
 <table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -25,7 +26,19 @@
 
 <!-- menüler -->
 <tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">&nbsp;</tr>
+<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
+<p class="menubar">
+<a href="index.html">Ana Sayfa</a>
+| <a href="hakkimizda.html">Hakkımızda</a>
+| <a href="projeler/index.html">Projeler</a>
+| <a href="belgeler/index.html">Belgeler</a>
+| <a href="urunler/index.html">Ürünler</a>
+| <a href="sss.html">Sık Sorulanlar</a>
+| <a href="iletisim.html">İletişim</a>
+| <a href="basin/index.html">Basında Uludağ</a>
+| <a href="eng/index.html">English</a>
+</p>
+</tr>
 </table>
 
 <br>
@@ -45,6 +58,25 @@
                 </td>
               </tr>
             </table>
+</td>
+</tr>
+</table>
+
+<!-- SAYFA İÇERİK SONU -->
+
+<!-- yayın hakkı -->
+<br>
+<br>
+<p class="not">
+Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
+kaynak gösterilmek koşulu ile kullanılması serbesttir.
+<em><br>
+<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
+Bilgi ve önerileriniz için
+<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
+</p>
+<br>
+
 </td>
 </tr>
 </table>
