--- a/web/projeler/pardus-kilavuz/icindekiler.html
+++ b/web/projeler/pardus-kilavuz/icindekiler.html
@@ -104,7 +104,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp;   Kurulum sonrası ayarlar<br>
 
 <p>
-<b>3. Pardus'a başlangıç  </b> &nbsp; <img src=../../images/degil.gif> &nbsp; <br> 
+<b>3. Pardus'a başlangıç  </b> <i>(Sorumlu: Gökçen Eraslan) &nbsp; <img src=../../images/devam.gif> &nbsp; <br> 
 &nbsp;   Sisteme giriş (kdm/gdm) <br>
 &nbsp;   Kaptan: Yönetimi ona bırakın <br>
 &nbsp;   Masaüstünde farenin kullanımı <br>
