--- a/trunk/web/projeler/pardus-kilavuz/index.html
+++ b/trunk/web/projeler/pardus-kilavuz/index.html
@@ -112,9 +112,20 @@ masaüstüne kaydedildikten sonra OpenOffice.org Writer ile açabilirsiniz)
 
 <p><span class="baslik">Son durum</span></p>
 
-Tamamlanan bölüm sayısı: 2<br>
-Yazılması süren bölüm sayısı: 8 <br>
-Atanmamış bölüm sayısı: 4 <br>
+Tamamlanan bölüm sayısı: <b>2</b><br>
+Yazılması süren bölüm sayısı: <b>8</b> <br>
+Atanmamış bölüm sayısı: <b>4</b> <br>
+
+<p><span class="baslik">Güncel yazarlar</span></p>
+
+Kılavuzun yazımı sırasında emeği geçen tüm yazarlara teşekkür ediyoruz.
+
+<ul>
+<li>Arda Çetin
+<li>Gökmen Göksel
+<li>Talat Uyarer
+<li>Rıdvan Can
+</ul>
 
 </td>
 </tr>
