--- a/web/projeler/pardus-kilavuz/icindekiler.html
+++ b/web/projeler/pardus-kilavuz/icindekiler.html
@@ -164,7 +164,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp; &nbsp; &nbsp;      Veritabanı: Base <br>
 &nbsp; &nbsp; &nbsp;      Formül düzenleyici: Math <br>
 <p>
-<b>8. Depolama aygıtlarının yönetimi  </b> <img src=../../images/degil.gif> <br>
+<b>8. Depolama aygıtlarının yönetimi  </b> <i>(Sorumlu: Arda Çetin)</i> &nbsp; <img src=../../images/devam.gif> <br>
 &nbsp;   Adım adım CD ve DVD yazalım <br>
 &nbsp;   Disket işlemleri <br>
 &nbsp; &nbsp; &nbsp;      Disketteki verilerin okunması  <br>
@@ -172,14 +172,13 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp;   Sistemdeki sabit diskler <br>
 &nbsp; &nbsp; &nbsp;      Sabit diski biçimlendirmek  <br>
 <p>
-<b>9. Sistem hakkında bilgi alalım </b> <img src=../../images/degil.gif> <br>
+<b>9. Sistem hakkında bilgi alalım </b><i>(Sorumlu: Arda Çetin)</i> &nbsp;  <img src=../../images/devam.gif> <br>
 &nbsp;   KDE Bilgi Merkezi <br>
 &nbsp; &nbsp; &nbsp;      Donanım bilgisi <br>
 &nbsp; &nbsp; &nbsp;      Günlük dosyaları <br>
 &nbsp;   KDE yardım merkezi <br>
 <p>
-<b>10. Çeşitli sistem araçları ve ayarları </b> 
-<i>(Sorumlu: Görkem Çetin)</i> &nbsp; <img src=../../images/devam.gif> &nbsp;<br>
+<b>10. Çeşitli sistem araçları ve ayarları </b> <i>(Sorumlu: Görkem Çetin)</i> &nbsp; <img src=../../images/devam.gif> &nbsp;<br>
 &nbsp;   Tasma ile diğer ayarlar <br>
 &nbsp; &nbsp; &nbsp;      Klavye düzeni <br>
 &nbsp; &nbsp; &nbsp;      Stil düzeni <br>
@@ -197,7 +196,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp;   Diğer Linux'lara bağlantı <br>
 &nbsp;   Dosya paylaşımı  <br>
 <p> 
-<b>11. Sorun olduğunda... </b> <img src=../../images/degil.gif> <br>
+<b>11. Sorun olduğunda... </b> <i>(Sorumlu: Gökmen Göksel)</i> &nbsp; <img src=../../images/devam.gif> <br>
 &nbsp;   İnternet listelerinden yardım almak <br>
 &nbsp;   Forumlara üye olmak<br>
 &nbsp;   Uygulamaların yardım sayfaları<br>
