--- a/web/projeler/pardus-kilavuz/index.html
+++ b/web/projeler/pardus-kilavuz/index.html
@@ -113,8 +113,8 @@ masaüstüne kaydedildikten sonra OpenOffice.org Writer ile açabilirsiniz)
 <p><span class="baslik">Son durum</span></p>
 
 Tamamlanan bölüm sayısı: <b>2</b><br>
-Yazılması süren bölüm sayısı: <b>9</b> <br>
-Atanmamış bölüm sayısı: <b>4</b> <br>
+Yazılması süren bölüm sayısı: <b>11</b> <br>
+Atanmamış bölüm sayısı: <b>2</b> <br>
 
 <p><span class="baslik">Güncel yazarlar</span></p>
 
@@ -123,7 +123,9 @@ Kılavuzun yazımı sırasında emeği geçen tüm yazarlara teşekkür ediyoruz
 <ul>
 <li>Arda Çetin
 <li>Gökmen Göksel
+<li>Gökçen Eraslan
 <li>Talat Uyarer
+<li>Görkem Çetin
 <li>Rıdvan Can
 </ul>
 
