--- a/web/projeler/pardus-kilavuz/icindekiler.html
+++ b/web/projeler/pardus-kilavuz/icindekiler.html
@@ -164,7 +164,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp; &nbsp; &nbsp;      Veritabanı: Base <br>
 &nbsp; &nbsp; &nbsp;      Formül düzenleyici: Math <br>
 <p>
-<b>8. Depolama aygıtlarının yönetimi  </b> <i>(Sorumlu: Arda Çetin)</i> &nbsp; <img src=../../images/devam.gif> <br>
+<b>8. Depolama aygıtlarının yönetimi  </b> &nbsp; <img src=../../images/degil.gif> <br>
 &nbsp;   Adım adım CD ve DVD yazalım <br>
 &nbsp;   Disket işlemleri <br>
 &nbsp; &nbsp; &nbsp;      Disketteki verilerin okunması  <br>
@@ -202,12 +202,11 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp;   Uygulamaların yardım sayfaları<br>
     
 <p>
-<b>EK A: Windows ve Linux program karşılıkları</b> <i>(Sorumlu: Arda Çetin)</i>
-&nbsp; <img src=../../images/ok.gif> &nbsp;
+<b>EK A: Windows ve Linux program karşılıkları</b> <i>(Sorumlu: Arda Çetin)</i> &nbsp; <img src=../../images/ok.gif> &nbsp;
 <p>
 <b>EK B: GNU Genel Kamu Lisansı</b> <i> <img src=../../images/ok.gif> </i>
 <p>
-<b>EK C: Sıkça sorulan sorular</b> <img src=../../images/degil.gif>
+<b>EK C: Sıkça sorulan sorular</b> <i>(Sorumlu: Arda Çetin)</i> &nbsp; <img src=../../images/devam.gif>
 
 
 </td>
