--- a/web/projeler/pardus-kilavuz/icindekiler.html
+++ b/web/projeler/pardus-kilavuz/icindekiler.html
@@ -79,7 +79,7 @@ Bu bölüm için sorumlu yazar aranıyor
 <p class="baslik"><img src="../../images/bullet-krm.png"> İçindekiler</p>
 
 <p>
-<b>0. Giriş </b> &nbsp; <img src=../../images/devam.gif> &nbsp; <br>
+<b>0. Giriş </b> &nbsp; <i>(Sorumlu: Görkem Çetin) &nbsp; <img src=../../images/devam.gif> &nbsp; <br>
 &nbsp;   Bu kitapta anlatılan konular
 <br>
 &nbsp;   Teşekkürler <br>
@@ -164,7 +164,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp; &nbsp; &nbsp;      Veritabanı: Base <br>
 &nbsp; &nbsp; &nbsp;      Formül düzenleyici: Math <br>
 <p>
-<b>8. Depolama aygıtlarının yönetimi  </b> &nbsp; <img src=../../images/degil.gif> <br>
+<b>8. Depolama aygıtlarının yönetimi  </b> &nbsp; <i>(Sorumlu: Bülent Şener)</i><img src=../../images/degil.gif> <br>
 &nbsp;   Adım adım CD ve DVD yazalım <br>
 &nbsp;   Disket işlemleri <br>
 &nbsp; &nbsp; &nbsp;      Disketteki verilerin okunması  <br>
