--- a/web/projeler/pardus-kilavuz/index.html
+++ b/web/projeler/pardus-kilavuz/index.html
@@ -113,8 +113,8 @@ masaüstüne kaydedildikten sonra OpenOffice.org Writer ile açabilirsiniz)
 <p><span class="baslik">Son durum</span></p>
 
 Tamamlanan bölüm sayısı: <b>2</b><br>
-Yazılması süren bölüm sayısı: <b>11</b> <br>
-Atanmamış bölüm sayısı: <b>2</b> <br>
+Yazılması süren bölüm sayısı: <b>13</b> <br>
+Atanmamış bölüm sayısı: <b>0</b> <br>
 
 <p><span class="baslik">Güncel yazarlar</span></p>
 
@@ -127,6 +127,7 @@ Kılavuzun yazımı sırasında emeği geçen tüm yazarlara teşekkür ediyoruz
 <li>Talat Uyarer
 <li>Görkem Çetin
 <li>Rıdvan Can
+<li>Bülent Şener
 </ul>
 
 </td>
