--- a/trunk/web/projeler/pardus-kilavuz/icindekiler.html
+++ b/trunk/web/projeler/pardus-kilavuz/icindekiler.html
@@ -164,7 +164,7 @@ Bu bölüm için sorumlu yazar aranıyor
 &nbsp; &nbsp; &nbsp;      Veritabanı: Base <br>
 &nbsp; &nbsp; &nbsp;      Formül düzenleyici: Math <br>
 <p>
-<b>8. Depolama aygıtlarının yönetimi  </b> &nbsp; <i>(Sorumlu: Bülent Şener)</i><img src=../../images/degil.gif> <br>
+<b>8. Depolama aygıtlarının yönetimi  </b> &nbsp; <i>(Sorumlu: Bülent Şener)</i><img src=../../images/devam.gif> <br>
 &nbsp;   Adım adım CD ve DVD yazalım <br>
 &nbsp;   Disket işlemleri <br>
 &nbsp; &nbsp; &nbsp;      Disketteki verilerin okunması  <br>
