--- a/web/projeler/kalite/projeler.html
+++ b/web/projeler/kalite/projeler.html
@@ -47,14 +47,20 @@
 	      <div align="center">
 	      <table border="0" width="90%">
 	      	<tr>
-		  <td align="left" class="metin" width="30%"><b>- Durum:</b></td><td align="left" class="metin"> Tasarım aşamasında.</td>
-		</tr>		<tr>
+		  <td align="left" class="metin" width="30%"><b>- Durum:</b></td><td align="left" class="metin"> Kodlanıyor.</td>
+		</tr>		
+                <tr>
 		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
 		  <a href="http://svn.uludag.org.tr/uludag/trunk/pardul/">http://svn.uludag.org.tr/uludag/trunk/pardul/</a></td>
 		</tr>
 
 		<tr>
-		  <td class="metin" align="left"><b>- Sorumlu:</b></td><td class="metin" align="left"> Faruk Eskicioğlu (kodlama).</td>
+		  <td class="metin" align="left"><b>- Sorumlu:</b></td><td class="metin" align="left"> Tolga Korkunçkaya (kodlama).</td>
+		  <td class="metin" align="left"><b><i>- Eski Sorumlu:</i></b></td><td class="metin" align="left"> Faruk Eskicioğlu.</td>
+		</tr>
+                <tr>
+		  <td class="metin" align="left"><b>- Test Adresi:</b></td><td class="metin" align="left">
+		  <a href="http://pardul.uludag.org.tr/">http://pardul.uludag.org.tr/</a></td>
 		</tr>
 	      </table>
 	      </div>
@@ -81,7 +87,7 @@
 	      <div align="center">
 	      <table border="0" width="90%">
 	      	<tr>
-		  <td align="left" class="metin" width="30%"><b>- Durum:</b></td><td align="left" class="metin"> Kodlanıyor.</td>
+		  <td align="left" class="metin" width="30%"><b>- Durum:</b></td><td align="left" class="metin"> Beta Testi Aşamasında.</td>
 		</tr>
 		<tr>
 		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
@@ -91,6 +97,11 @@
 		<tr>
 		  <td class="metin" align="left"><b>- Sorumlu:</b></td><td class="metin" align="left"> Bahadır Kandemir (tasarım, kodlama).</td>
 		</tr>
+                <tr>
+		  <td class="metin" align="left"><b>- Test Adresi:</b></td><td class="metin" align="left">
+		  <a href="http://pardil.uludag.org.tr/">http://pardil.uludag.org.tr/</a></td>
+		</tr>
+
 	      </table>
 	      </div>
 	      <br>
