--- a/web/projeler/paketler/kulucka/kulucka.html
+++ b/web/projeler/paketler/kulucka/kulucka.html
@@ -160,7 +160,7 @@ ve sorunludur. <BR>
 <BR>
 <EM>Gentoo</EM> dışında kalan tüm dağıtımlarında aynı geliştirme araçlarına
 sahip olmasına rağmen kaynak kod ile çalışma anlamında en rahat ve
-özelleştirilebilir geliştirme ortamını <EM>Gentoo</EM> sağlamıktadır.
+özelleştirilebilir geliştirme ortamını <EM>Gentoo</EM> sağlamaktadır.
 Bunun en büyük sebebi <EM>Gentoo</EM> dışındaki dağıtımların belli bir
 paket formatına sahip olmaları ve bu paketleri binary halde dağıtmalarıdır.
 Oysa kaynak kod ile çalışma zaten <EM>Gentoo</EM>'nun doğal işleyiş
